// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content slot 1`] = `
<div class="ghb-tree-select" style="height: 300px;">
  <div class="ghb-sidebar ghb-tree-select__nav"><a class="ghb-sidebar-item ghb-sidebar-item--select ghb-tree-select__nav-item">
      <div class="ghb-sidebar-item__text">group1
        <!---->
      </div>
    </a></div>
  <div class="ghb-tree-select__content">Custom Content</div>
</div>
`;

exports[`empty list 1`] = `
<div class="ghb-tree-select" style="height: 300px;">
  <div class="ghb-sidebar ghb-tree-select__nav"></div>
  <div class="ghb-tree-select__content"></div>
</div>
`;

exports[`height prop 1`] = `
<div class="ghb-tree-select" style="height: 100vh;">
  <div class="ghb-sidebar ghb-tree-select__nav"></div>
  <div class="ghb-tree-select__content"></div>
</div>
`;

exports[`nav render badge 1`] = `
<div class="ghb-tree-select" style="height: 300px;">
  <div class="ghb-sidebar ghb-tree-select__nav"><a class="ghb-sidebar-item ghb-sidebar-item--select ghb-tree-select__nav-item">
      <div class="ghb-sidebar-item__text">group1<div class="ghb-info ghb-sidebar-item__info">3</div>
      </div>
    </a></div>
  <div class="ghb-tree-select__content"></div>
</div>
`;

exports[`selected-icon prop 1`] = `
<div class="ghb-ellipsis ghb-tree-select__item ghb-tree-select__item--active">city1<i class="ghb-icon ghb-icon-foo ghb-tree-select__selected">
    <!----></i></div>
`;
